thcrap2nix/src/bindings.rs

#[test]
fn bindgen_test_layout_progress_callback_status_t() {
    const UNINIT: ::std::mem::MaybeUninit<progress_callback_status_t> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<progress_callback_status_t>(),
        36usize,
        concat!("Size of: ", stringify!(progress_callback_status_t))
    );
    assert_eq!(
        ::std::mem::align_of::<progress_callback_status_t>(),
        4usize,
        concat!("Alignment of ", stringify!(progress_callback_status_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).patch) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(progress_callback_status_t),
            "::",
            stringify!(patch)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fn_) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(progress_callback_status_t),
            "::",
            stringify!(fn_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).url) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(progress_callback_status_t),
            "::",
            stringify!(url)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).status) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(progress_callback_status_t),
            "::",
            stringify!(status)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).error) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(progress_callback_status_t),
            "::",
            stringify!(error)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).file_progress) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(progress_callback_status_t),
            "::",
            stringify!(file_progress)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).file_size) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(progress_callback_status_t),
            "::",
            stringify!(file_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).nb_files_downloaded) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(progress_callback_status_t),
            "::",
            stringify!(nb_files_downloaded)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).nb_files_total) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(progress_callback_status_t),
            "::",
            stringify!(nb_files_total)
        )
    );
}
pub type progress_callback_t = ::std::option::Option<
    unsafe extern "C" fn(
        status: *mut progress_callback_status_t,
        param: *mut ::std::os::raw::c_void,
    ) -> bool,
>;
pub type update_filter_func_t = ::std::option::Option<
    unsafe extern "C" fn(
        fn_: *const ::std::os::raw::c_char,
        filter_data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
extern "C" {
    pub fn update_filter_global_wrapper(
        fn_: *const ::std::os::raw::c_char,
        arg1: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn update_filter_games_wrapper(
        fn_: *const ::std::os::raw::c_char,
        games: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn stack_update_wrapper(
        filter_func: update_filter_func_t,
        filter_data: *mut ::std::os::raw::c_void,
        progress_callback: progress_callback_t,
        progress_param: *mut ::std::os::raw::c_void,
    );
}
extern "C" {
    pub fn loader_update_with_UI_wrapper(
        exe_fn: *const ::std::os::raw::c_char,
        args: *mut ::std::os::raw::c_char,
    ) -> BOOL;
}
extern "C" {
    pub fn update_notify_thcrap_wrapper() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn RepoDiscover_wrapper(start_url: *const ::std::os::raw::c_char) -> *mut *mut repo_t;
}
extern "C" {
    pub fn thcrap_update_exit_wrapper();
}
pub type __builtin_va_list = *mut ::std::os::raw::c_char;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct lconv {
    pub _address: u8,
}
